[tool.poetry]
name = "clj"
version = "0.1.0"
description = "A diary with bullet-journal mechanism"
authors = ["Erawpalassalg <mael.arnaud@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
pylint = "^2.4"

[tool.poetry.scripts]
clj = "clj.clj:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
