[tool.poetry]
name = "bli"
version = "0.1.2b0"
description = "A todo-list manager with bullet-journal mechanisms"
readme = "README.md"
authors = ["erawpalassalg <mael.arnaud@gmail.com>"]
homepage = "https://github.com/Erawpalassalg/bli"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Office/Business :: News/Diary"
]


[poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
black = { version = "*", allow-prereleases = true }
pylint = "^2.4"
twine = "^3.1.1"

[tool.poetry.scripts]
bli = "bli.bli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
